--- a/.gitignore
+++ b/.gitignore
@@ -152,7 +152,7 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 src\assets\authorization.py
-
+*.txt
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
